# fgx

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  README.txt  fabfile.py  fgx.doxygen.config  fgx.pro  make_docs.sh
CMakeModules/: ConfigureMsvc3rdParty.cmake  FindMarble.cmake
docs/: custom.css  doxygen.fgx.conf  dynsections.js  footer.html  header.html  layout.xml
docs/pages/: developer.md  download.md  hackers_guide.dox  hacking.md  mainpage.cpp
etc/: dist_description.txt  fgx.desktop
screenshots/: RULES.txt
src/: .gitignore  Info.plist  app_config.h  fgx.cpp  fgx.h  fgx.pro  fgx.ui  main.cpp  moc_fgx.cpp  src.pro  ui_fgx.h
src/aircraft/: aerotools.cpp  aerotools.h  aircraftdata.cpp  aircraftdata.h  aircraftimport.cpp  aircraftimport.h  aircraftmodel.cpp  aircraftmodel.h  aircraftproxymodel.cpp  aircraftproxymodel.h  aircraftwidget.cpp  aircraftwidget.h  modelinfo.cpp  modelinfo.h  xaero.cpp  xaero.h
src/airports/: airportsdata.cpp  airportsdata.h  airportsimport.cpp  airportsimport.h  airportswidget.cpp  airportswidget.h  airporttools.cpp  airporttools.h  aptdatparser.cpp  aptdatparser.h  importairportsdialog.cpp  importairportsdialog.h  importairportswidget.cpp  importairportswidget.h  metarwidget.cpp  metarwidget.h
src/deploy/osx/: 2-10-x-Info.plist  2-6-x-Info.plist  2-8-x-Info.plist  README.txt  fgx.icns
src/fgtools/: fileviewerwidget.cpp  fileviewerwidget.h
src/fgx.app/Contents/: PkgInfo
src/fgx.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak  raoulquittarco.mode1v3  raoulquittarco.pbxuser
src/flights/: flightpositions.cpp  flightpositions.h  flightsmodel.cpp  flightsmodel.h  flightswidget.cpp  flightswidget.h
src/installer/: aircraftinstallwidget.cpp  aircraftinstallwidget.h  downloadmanagerwidget.cpp  install_aircrafttreewidget.cpp  install_aircrafttreewidget.h  installwindow.cpp  installwindow.h  servercall.cpp  servercall.h
src/launcher/: advancedoptionswidget.h  coresettingswidget.cpp  expertoptionswidget.cpp  headerwidget.cpp  headerwidget.h  launcherwindow.cpp  launcherwindow.h  menuwidget.cpp  menuwidget.h  timeweatherwidget.cpp
src/libs/: libosdabzip.dylib
src/logs/: viewlogswidget.cpp  viewlogswidget.h
src/map/: mapcorewidget.cpp  mapcorewidget.h  mapmainwindow.cpp  mapmainwindow.h  openlayerwidget.cpp  openlayerwidget.h  xmarblewidget.cpp  xmarblewidget.h
src/maps/: googlemapwidget.cpp  googlemapwidget.h  mpmapwidget.cpp  mpmapwidget.h
src/mpmap/: crossfeedmodel.cpp  crossfeedmodel.h  flightsmodel.cpp  flightsmodel.h  flightswidget.cpp  flightswidget.h  gmapwidget.cpp  gmapwidget.h  mpmapwidget.cpp  mpmapwidget.h  mpmapxwidget.cpp  mpmapxwidget.h  pilotswidget.cpp  pilotswidget.h  xopenlayer.cpp  xopenlayer.h  xwebpage.cpp  xwebpage.h
src/navdata/: navdatamodel.cpp  navdatamodel.h  navdatawidget.cpp  navdatawidget.h
src/network/: crossfeedjson.cpp  crossfeedjson.h  mptelnet.cpp  mptelnet.h  netman.cpp  netman.h  networkwidget.cpp  networkwidget.cpp.orig  networkwidget.cpp.rej  networkwidget.h  xreply.cpp  xreply.h
src/panes/: advancedoptionswidget.cpp  advancedoptionswidget.h  coresettingswidget.cpp  coresettingswidget.h  expertoptionswidget.cpp  expertoptionswidget.h  outputpreviewwidget.cpp  outputpreviewwidget.h  renderingwidget.cpp  renderingwidget.h  timeweatherwidget.cpp  timeweatherwidget.h  viewlogwidget.cpp  viewlogwidget.h
src/props/: propeditwidget.cpp  propeditwidget.h  propstreewidget.cpp  propstreewidget.h  telnetslave.cpp  telnetslave.h
src/resources/: README.txt  artwork.qrc  default.qrc  fgx-map.qrc  fgx22.icns  fgx_32x32x32.xpm  fonts.qrc  google_map.qrc  icons.qrc  images.qrc  marble_icons.qrc  openlayers.qrc  ycons.qrc
src/resources/default/: osx_default.ini  x_default.ini
src/resources/google_map/: gmap.html
src/resources/google_map_html/: gmap.html
src/resources/openlayers/: OpenLayers.js  map.html
src/settings/: dbsettingswidget.cpp  dbsettingswidget.h  pathssettingswidget.cpp  pathssettingswidget.h  settingsdialog.cpp  settingsdialog.h
src/setupwizard/: README.txt  completedpage.cpp  completedpage.h  confirmpage.cpp  confirmpage.h  fgexepage.cpp  fgexepage.h  fgrootpage.cpp  fgrootpage.h  finishpage.cpp  finishpage.h  otherpage.cpp  otherpage.h  setupwizard.cpp  setupwizard.h  terrasyncpage.cpp  terrasyncpage.h
src/utilities/: dirDialog.cpp  dirDialog.h  fgx_gzlib.cpp  fgx_gzlib.h  fgx_unz.cpp  fgx_unz.h  fileDialog.cpp  fileDialog.h  helpers.cpp  helpers.h  loadAptDat.cpp  loadAptDat.h  messagebox.cpp  messagebox.h  statusbar.cpp  statusbar.h  uncompress.cpp  uncompress.h  utilities.cpp  utilities.h  workThread.cpp  workThread.h
src/utilities/minizip/: README.minizip.txt  ioapi.h  iowin32.c  miniunz.c  minizip.c  mztools.c  unzip.c  unzip.h  zip.c  zip.h
src/utilities/osdab/: unzip.cpp  unzip.h  unzip_p.h  zip.cpp  zip.h  zip_p.h  zipentry_p.h  zipglobal.cpp  zipglobal.h
src/utilities/quazip/: JlCompress.cpp
src/utilities/simgear/: SGGeodesy.cpp  SGGeodesy.h  constants.h
src/utilities/zlib/: adler32.c  compress.c  crc32.c  deflate.h  fgx_zconf.h  fgx_zlib.h  fgx_zutil.h  gzguts.h  infback.c  inffast.c  inflate.c  inftrees.c  (+2 more)
src/weather/: metarwidget.cpp  metarwidget.h
src/xmarble/: flightspaintlayer.cpp  flightspaintlayer.h  mapcorewidget.cpp  mapcorewidget.h  mapmainwindow.cpp  mapmainwindow.h  mappanel.cpp  mappanel.h  mapselectdialog.cpp  mapselectdialog.h  mapviewsmodel.cpp  mapviewsmodel.h  xmarblewidget.cpp  xmarblewidget.h
src/xobjects/: latlng.cpp  latlng.h  mainobject.cpp  mainobject.cpp.rej  mainobject.h  xopt.cpp  xopt.h  xprocess.cpp  xprocess.h  xreply.h  xsettings.cpp  xsettings.h  xsettingsmodel.cpp  xsettingsmodel.h
src/xwidgets/: execontrols.cpp  execontrols.h  fgxdebugwidget.cpp  fgxdebugwidget.h  toolbargroup.cpp  toolbargroup.h  xbrowser.cpp  xbrowser.h  xcommandpreviewidget.cpp  xcommandpreviewidget.h  xdebugtreewidget.cpp  xdebugtreewidget.h  xgroupboxes.cpp  xgroupboxes.h  xgroupvbox.cpp  xgroupvbox.h  xmessagelabel.cpp  xmessagelabel.h  xstatusbar.cpp  xstatusbar.h  xtreewidgetitem.h
(+24 files in other folders)
